--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,12 +2,12 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: 'Bebas Neue', cursive;
 }
 
 
 body {
-    max-width: 1800px;
-    width: 100%;
+    max-width: 100%;
 }
 
 /*Font fams:
