--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -2,8 +2,9 @@
 .nav-link {
   color:white;
   text-decoration: none;
-  font-family: 'Roboto', sans-serif;
   font-weight: 600;
+  font-size: larger;
+  letter-spacing: 2px;
 }
 
 .nav-link:hover {
@@ -27,64 +28,78 @@
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-menu {display: block;}
   
-
+/*
   .body__front{
     background-image: url(../images/redbull__back.gif);
     width: 1800px;
-    height: auto; /* You must set a specified height */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover the entire container */
+    height: auto; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
     background-attachment: fixed;
     
-    /* Behöver overflow hidden någonstans?*/
-}
+   
+}*/
 
 /* index - first page */
+
+.all__landing{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.front__video {
+  position: fixed;
+  background-size: cover;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+
+  
+
+  
+}
 
 /*
 .all__landing {
   display: flex;
-  flex-wrap: wrap;
-  position: relative;
   justify-content: flex-end;
-  align-items: center;
-} */
+  height: 500px;
+  align-items: flex-end;
+  margin-right: 120px; 
+}
+*/
+
 
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex-wrap: wrap;
-  position: fixed;
+  position: absolute;
+  bottom: 0;
   background: rgba(0, 0, 0, 0.5);
   color: #f1f1f1;
-  max-width: 500px;
-  width: 100%;
-  margin-right: 50px;
+  width: 40%;
   padding: 20px;
-}
-  
- 
-.mybtn {
-  width: 200px;
-  font-size: 18px;
-  padding: 10px;
-  background: none;
-  border-color: white;
-  color: #fff;
-  cursor: pointer;
+  margin-right: 50px;
 }
 
-#myBtn > a {
-  list-style: none;
-  text-decoration: none;
-  color:white;
-  font-size: larger;
+
+.mybtn {
+  width: 110px;
+  height: 40px;
+  background: none;
+  border-style: solid;
+  border-color: white;
 }
-  
-#myBtn:hover{
-  background-color: black;
-  font-size: 24px;
-  transition: all 0.3s ease;
+
+.front__btn:hover {
+  color:red;
+  font-size: large;
+}
+
+.front__btn {
+  text-decoration: none;
+  color: white;
 }
