--- a/styles/_retouch.scss
+++ b/styles/_retouch.scss
@@ -13,7 +13,7 @@
     width: 100%;
     padding: 4% 2%;
     box-sizing: border-box;
-    height: 100vh; /* ca 880px*/
+    height: 1300px
   }
   
   .box {
@@ -64,6 +64,22 @@
 .fa-camera-retro {
     margin-left:8px;
     color:	#39a0a0;
+}
+
+/*Granit pics*/ 
+
+.granit__container2{
+  display: flex;
+}
+
+.granit__box {
+  display: flex;
+  justify-content: center;
+  margin: 40px 0px 40px 0px;
+}
+
+.granit__box2 {
+  margin: 0px 5px 0px 5px;
 }
 
 /* Monsun pic*/
