--- a/styles/_wacom.scss
+++ b/styles/_wacom.scss
@@ -8,7 +8,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     overflow: hidden;
-    height: 2100px;
+    height: 2200px;
     margin-top:50px;
     text-align: center;
 }
@@ -22,38 +22,42 @@ body {
     width: 100%;
     height: 200px;
     color:white;
-    font-family: 'Raleway', sans-serif;
     font-weight: 600;
+    font-size: 22px;
     margin-top:40px;
     letter-spacing: 2px;
     
 }
 
 
-.pic-text__container{
+.vid-text__container{
     display: flex;
     flex-wrap: wrap;
     flex-direction:column;
 }
 
-.wacom__pic{
-    width: 100%;
-    max-width: 1100px;
-    height: 671px;
-}
 
-.wacom__video {
+
+.video__box {
     display: flex;
     flex-wrap: wrap;
     position: relative;
     justify-content: center;
 }
 
-.video__box{
-    width: 100%;
-    max-width: 1300px;
-    height: 871px;
+
+.wacom__video{
+    max-width: 100%;
+    height: auto;
 }
+
+.wacom__image {
+    max-width:1400px;
+    width: 100%; 
+    height:1000px;
+}
+
+
 
 @media screen and (min-width: 0px) and (max-width: 768px) {
     .video__box {
