--- a/styles/_ghost.scss
+++ b/styles/_ghost.scss
@@ -88,11 +88,12 @@ h2 {
 }
 
 
-.ghosthouse__video {
+.ghost__video {
     display: flex;
     flex-wrap: wrap;
     position: relative;
     justify-content: center;
+	margin-top:40px;
 }
 
 
