--- a/styles/index.css
+++ b/styles/index.css
@@ -124,7 +124,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   overflow: hidden;
-  height: 2200px;
+  height: 2000px;
   margin-top: 50px;
   text-align: center;
 }
@@ -140,8 +140,8 @@ body {
   color: white;
   font-weight: 600;
   font-size: 22px;
-  margin-top: 40px;
   letter-spacing: 2px;
+  margin-bottom: 40px;
 }
 
 .vid-text__container {
@@ -168,9 +168,41 @@ body {
   height: 1000px;
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+/* IPAD*/
+@media screen and (min-width: 415px) and (max-width: 980px) {
+  .all__wacom-page {
+    height: 1300px;
+  }
+
   .video__box {
-    width: 90%;
+    width: 70%;
+    align-self: center;
+  }
+
+  .wacom__image {
+    max-width: 700px;
+    height: 500px;
+  }
+}
+/*MOBIL*/
+@media screen and (min-width: 0px) and (max-width: 414px) {
+  .wacom__text {
+    font-size: 10px;
+    width: 200px;
+  }
+
+  .all__wacom-page {
+    height: 1000px;
+  }
+
+  .video__box {
+    width: 25%;
+    align-self: center;
+  }
+
+  .wacom__image {
+    max-width: 300px;
+    height: 200px;
   }
 }
 /* TEST FRÅN NÄTET MED PLAYBUTTON*/
@@ -318,11 +350,12 @@ h2 {
     transform: translate(0);
   }
 }
-.ghosthouse__video {
+.ghost__video {
   display: flex;
   flex-wrap: wrap;
   position: relative;
   justify-content: center;
+  margin-top: 40px;
 }
 
 .glitch:hover {
