--- a/styles/_weeds.scss
+++ b/styles/_weeds.scss
@@ -9,6 +9,7 @@
     flex-direction: column;
     align-items: center;
     color:#fff;
+    font-size: 20px;
 }
 
 .weeds__imagebox1 {
@@ -18,6 +19,27 @@
     margin: 40px 0px 40px 0px;
 }
 
+.weeds__imagebox2 {
+    display: flex;
+    justify-content: center;
+}
+
 .weeds__videobox {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
     margin:20px 0px 20px 0px;
 }
+
+.weed__img {
+    max-width: 1200px;
+    width: 100%;
+    height: auto;  
+}
+
+
+
+    
+
+
+
