--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -3,7 +3,7 @@
   color:white;
   text-decoration: none;
   font-weight: 600;
-  font-size: larger;
+  font-size: 25px;
   letter-spacing: 2px;
 }
 
@@ -19,6 +19,7 @@
 
 .dropdown-item {
   color:white;
+  font-size: 18px;
 }
 
   /* Change color of dropdown links on hover */
