--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -20,21 +20,6 @@
 }
 
 /* Position text in the middle of the page/image */
-.bg-text {
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-  color: white;
-  font-weight: bold;
-  border: 3px solid #39a0a0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 80%;
-  padding: 20px;
-  text-align: center;
-}
 
 .images__about-container {
   display: flex;
@@ -48,7 +33,7 @@
 
 .felicia__box {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   height: 800px;
   margin-top: 20px;
   width: 1500px;
@@ -61,26 +46,31 @@
   font-size: 20px;
   color:#fff;
   justify-content: center;
-    height: 620px;
+  height: 620px;
+  width: 500px;
+  margin-left: 30px;
+
 }
 
 .rendering__box {
   display: flex;
   align-self: center;
-  align-items: flex-end;
-  justify-content: flex-end;
-  width: 1800px;
-  margin-right: 40px;
+  align-items: center;
+  margin-left: 40px;
+}
+
+.rendering__pic {
+  max-width: 900px;
+  width: 100%;
+  height: 1200px;
 }
 
 
 
 .rendering__text {
-  margin-right: 20px;
-    display: flex;
-    flex-direction: column;
-    /* align-content: flex-end; */
-    align-items: center;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .list {
