--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -32,7 +32,7 @@
     font-family: 'Josefin Sans', sans-serif; 
   }
 
-  .fa {
+  .fa, .fa-artstation {
     padding: 20px;
     font-size: 30px;
     width: 50px;
@@ -41,12 +41,12 @@
     margin: 5px 2px;
   }
 
-  .fa-facebook, .fa-instagram, .fa-linkedin, .fa-pinterest, .fa-youtube {
+  .fa-facebook, .fa-instagram, .fa-linkedin, .fa-youtube, .fa-artstation {
     color: white;
   }
 
 
-  .fa-facebook:hover, .fa-instagram:hover, .fa-linkedin:hover, .fa-pinterest:hover, .fa-youtube:hover {
+  .fa-facebook:hover, .fa-instagram:hover, .fa-linkedin:hover, .fa-artstation:hover, .fa-youtube:hover {
     color:	#39a0a0;
     transition: all 0.3s ease 0s;
   }
