--- a/styles/_redbull.scss
+++ b/styles/_redbull.scss
@@ -9,6 +9,10 @@ h1 {
 }
 
 .all__redbull {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: start;
     margin: 20px 0px 20px 0px;
 }
 
@@ -32,9 +36,10 @@ h1 {
 }
 
 .redbull1, .redbull2 {
-    max-width: 820px;
+    max-width: 1300px;
     width: 100%;
-    height: 500px;
+    height: 800px;
+    margin:20px;
 }
 
 .redbull3 {
@@ -59,6 +64,7 @@ h1 {
 
 .img__redbox2{
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+
 }
