--- a/styles/_retouch.scss
+++ b/styles/_retouch.scss
@@ -1,51 +1,23 @@
 /* All content for retouch here - (om ej för mycket, gör likadant i 3D och samla?)*/
 
 
-.all__maria-page, .all__granit-page, .all__mon-page, .all__lefvander-page, .all__sven-page  {
+.all__maria-page, .all__granit-page, .all__mon-page, .all__sven-page  {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 /* Kolla upp vad alla vh/em vad allt nu är.. i px och kör på det. Samt alla sidor måste ha #HEX färg alt. bara färgnamn*/
-.container {
+.container1, .container2, .container3 {
     display: flex;
-    width: 100%;
-    padding: 4% 2%;
-    box-sizing: border-box;
-    height: 1300px
+    justify-content: center;
+    margin-bottom: 10px;
   }
-  
-  .box {
-    flex: 1;
-    overflow: hidden;
-    transition: .5s;
-    margin: 0 2%;
-    box-shadow: 0 20px 30px rgba(0,0,0,.1);
-    line-height: 0;
-    cursor: pointer;
-  }
-  
-  .box > img {
-    width: 200%;
-    height: calc(100% - 10vh);
-    object-fit: cover; 
-    transition: .5s;
-  }
-  
-  .box > span {
-    font-size: 3.8vh;
-    display: block;
-    text-align: center;
-    height: 10vh;
-    line-height: 2.6;
-  }
-  
-  .box:hover { flex: 1 1 50%; }
-  .box:hover > img {
-    width: 100%;
-    height: 100%;
-  }
+
+  .container1 {
+    margin-top: 30px;
+    }
+
 
 .text__photographer {
     display: flex;
@@ -104,9 +76,9 @@
     border-radius: 5px;
 }
 
-/* Amanda page */
+/* Amanda page and Lefvander */
 
-.all__amanda-page {
+.all__amanda-page, .all__lefvander-page {
     display: flex;
     position: relative;
     flex-direction: column;
@@ -121,10 +93,14 @@
     margin-top: 30px;
 }
 
-.amanda__pic {
+.amanda__pic, .lefvander__pic, .lefvander__pic1, .maria__pic, .maria__pic1 {
     max-width: 800px;
     width: 100%;
     height: auto;
+}
+
+.lefvander__pic1, .maria__pic {
+  margin-right: 10px;
 }
 
 .text__granit {
@@ -137,3 +113,19 @@
   margin-bottom:50px;
   border-radius: 5px;
 }
+
+
+
+/* IPAD*/
+@media screen and (min-width: 0px) and (max-width: 1505px) {
+
+
+  .lefvander__pic, .lefvander__pic1, .maria__pic, .maria__pic1 {
+      width: 40% ;
+      align-content: center; 
+  }
+
+
+}
+
+
