--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -82,7 +82,6 @@
   align-items: center;
   position: absolute;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
   color: #f1f1f1;
   width: 40%;
   padding: 20px;
@@ -99,7 +98,7 @@
 }
 
 .front__btn:hover {
-  color:red;
+  color:#fff;
   font-size: large;
 }
 
