--- a/styles/index.scss
+++ b/styles/index.scss
@@ -8,8 +8,9 @@
 
 body {
     width: 100%;
-    background-color: #000;
+    background-color: #fff;
 }
+
 
 /*Font fams:
 font-family: 'Cormorant Unicase', serif;
