--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -1,5 +1,9 @@
 .all__about-page {
-  height: 2100px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 2300px;
+  margin: 40px 0px 40px 0px;
 }
 
 .bg-image {
@@ -11,7 +15,7 @@
   -webkit-filter: blur(6px);*/
 
   /* Full height */
-  max-height: 700px;
+  min-height: 700px;
   height: 100%;
 
   /* Center and scale the image nicely */
@@ -21,14 +25,33 @@
 
 /* Position text in the middle of the page/image */
 
-.images__about-container {
+.felicia__head-container {
   display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  justify-content: center;
+}
+
+.about__head-text {
+  width: 500px;
+}
+
+.about__head {
+  font-size: 50px;
 }
 
 .laugh {
   color:#39a0a0;
+}
+
+.render__head {
+  margin-left: -10%;
+  color:#39a0a0;
+  font-size: 80px;
+}
+
+.felicia__pic {
+  max-width: 400px;
+  width: 100%;
+  height: 600px;
 }
 
 .felicia__box {
@@ -36,7 +59,6 @@
   justify-content: center;
   height: 800px;
   margin-top: 20px;
-  width: 1500px;
 }
 
 .felicia__text-box {
@@ -44,12 +66,16 @@
   flex-direction: column;
   align-items: center;
   font-size: 20px;
-  color:#fff;
+  color:#000;
   justify-content: center;
   height: 620px;
   width: 500px;
   margin-left: 30px;
+}
 
+.about__fel-text {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 18px;
 }
 
 .rendering__box {
@@ -60,7 +86,7 @@
 }
 
 .rendering__pic {
-  max-width: 900px;
+  max-width: 1000px;
   width: 100%;
   height: 1200px;
 }
@@ -74,6 +100,6 @@
 }
 
 .list {
-  color: #fff;
+  color: #000;
   font-size: 25px;
 }
