--- a/styles/_retouch.scss
+++ b/styles/_retouch.scss
@@ -25,13 +25,15 @@
     max-width: 340px;
     width: 100%;
     height: 26px;
-    background-color: white;
-    opacity: 0.6;
+    background-color:#000;
+    color:#39a0a0;
+    opacity: 0.8;
     letter-spacing: 1px;
     margin-bottom:50px;
     margin-top:20px;
     border-radius: 5px;
 }
+
 
 .fa-camera-retro {
     margin-left:8px;
@@ -68,8 +70,7 @@
     max-width: 320px;
     width: 100%;
     height: 26px;
-    color:white;
-    opacity: 0.6;
+    color:#000;
     letter-spacing: 1px;
     margin-bottom:50px;
     margin-top:20px;
