--- a/styles/_storytel.scss
+++ b/styles/_storytel.scss
@@ -1,10 +1,23 @@
 .all__storytel {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 40px 0px 40px 0px;
+    height: 2700px;
 }
 
 .img__storytel-box {
     margin-bottom: 40px;
+}
+
+.story__head-text {
+    width: 600px;
+    font-size: 22px;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+}
+
+.storytel__text {
+    margin-top: 40px;
 }
