--- a/styles/_wacom.scss
+++ b/styles/_wacom.scss
@@ -18,7 +18,7 @@
     max-width: 500px;
     width: 100%;
     height: 200px;
-    color:white;
+    color:#000;
     font-weight: 600;
     font-size: 22px;
     letter-spacing: 2px;
