--- a/styles/_redbull.scss
+++ b/styles/_redbull.scss
@@ -1,7 +1,4 @@
-*{
-    font-family: 'Bebas Neue', cursive;
-    
-}
+
 
 h1 {
     font-weight: 700;
@@ -38,7 +35,7 @@ h1 {
 .redbull1, .redbull2 {
     max-width: 1300px;
     width: 100%;
-    height: 800px;
+    height: auto;
     margin:20px;
 }
 
