--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -34,39 +34,30 @@
 
 /* index - first page */
 
-.all__landing{
-  display: flex;
-  justify-content: flex-end;
+.redbull__background {
+  background-image: url(../images/redbull__index1.jpg);
+  width: 100%;
+  height: 1000px; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  overflow-x: hidden;
+  background-attachment: fixed;
 }
-
-#myVideo {
-
-}
-
-
-/*
-.all__landing {
-  display: flex;
-  justify-content: flex-end;
-  height: 500px;
-  align-items: flex-end;
-  margin-right: 120px; 
-}
-*/
-
-
 .content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  height: 900px;
+  color: #fff;
+}
+
+.index__text-box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
-  bottom: 0;
-  color: #f1f1f1;
-  width: 40%;
-  padding: 20px;
-  margin-right: 50px;
 }
-
 
 .mybtn {
   width: 110px;
@@ -86,3 +77,86 @@
   color: white;
 }
 
+
+@media screen and (min-width: 325px) and (max-width: 450px)  {
+
+  .redbull__background{
+    height: 700px;
+  }
+  .content {
+    align-items: flex-end;
+    height: 650px;
+  }
+
+  .index__text-box {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+/*small phones*/
+@media screen and (min-width: 0px) and (max-width: 325px) {
+  .redbull__background{
+    height: 580px;
+  }
+  .content {
+    align-items: flex-end;
+    height: 500px;
+  }
+
+  .index__text-box {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+/* bigger phones*/
+@media screen and (min-width: 330px) and (max-width: 376px) {
+  .redbull__background {
+    height: 812px;
+  }
+  
+  .content{
+    height: 700px;
+  }
+}
+
+/*ipad*/
+@media only screen and (max-width: 767px) {
+  .redbull__background {
+     background-image: url(../images/redbull.jpg);
+     background-position: center;
+     background-size: cover;
+  }
+  
+}
+
+/* Ipad*/
+@media screen and (min-width: 768px) and (max-width: 1020px) {
+
+  .redbull__background {
+    height: 1000px;
+  }
+.index__text-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 20px;
+}
+}
+
+/* Ipad pro*/
+@media screen and (min-width: 1021px) and (max-width: 1200px) {
+  .redbull__background {
+    height: 1370px;
+  }
+
+  .content {
+    align-items: flex-end;
+    height: 800px;
+  }
+}
