--- a/styles/_retouch.scss
+++ b/styles/_retouch.scss
@@ -22,6 +22,7 @@
 .text__photographer {
   display: flex;
   justify-content: center;
+  align-items: center;
   max-width: 340px;
   width: 100%;
   height: 26px;
