--- a/styles/_wacom.scss
+++ b/styles/_wacom.scss
@@ -35,7 +35,7 @@
 
 
 
-.video__box {
+.video__box-wacom {
     display: flex;
     flex-wrap: wrap;
     position: relative;
@@ -56,7 +56,7 @@
         height: 1300px;
     }
 
-    .video__box {
+    .video__box-wacom {
         width: 70%;
         align-self: center; 
     }
@@ -80,7 +80,7 @@
         height: 1000px;
     }
 
-    .video__box {
+    .video__box-wacom {
         width: 25%;
         align-self:center;
 }
